@@ -1,3 +1,11 @@
+Fri Dec 12 17:56:58 2003  George Lebl <jirka@5z.com>
+
+	* daemon/gdm.[ch], daemon/slave.c, daemon/xdmcp.c, docs/C/gdm.xml:
+	  add a GO fifo SOP command and a --wait-for-go command line option.
+	  This is intended to allow an initialization script to start X
+	  early and have that be the GDM display, but not allow users to
+	  log in until it's ready.
+
 Fri Dec 12 17:14:41 2003  George Lebl <jirka@5z.com>
 
 	* daemon/gdm.h, gui/gdmlogin.c, gui/greeter/greeter.c,
